--- a/BaiTap4/nbproject/project.properties
+++ b/BaiTap4/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=BaiTap4
-main.class=baitap4.main
+main.class=baitap4.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
