--- a/BaiTap4Again/nbproject/project.properties
+++ b/BaiTap4Again/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/BaiTap4.jar
+dist.jar=${dist.dir}/BaiTap4Again.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/BaiTap4
+dist.jlink.output=${dist.jlink.dir}/BaiTap4Again
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=BaiTap4
-main.class=baitap4.Main
+jlink.launcher.name=BaiTap4Again
+main.class=baitap4again.BaiTap4Again
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
